--- a/style.css
+++ b/style.css
@@ -81,19 +81,6 @@ div h1 {
 }
 
 
-.milktea-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: space-around;
-    align-content: center;
-    flex-direction: column;
-    margin-bottom: 20px;
-    min-height: 800px;
-    padding: 30px;
-    border-bottom: 2px solid rgb(212, 22, 149);
-}
-
 .cart-container {
     height: 200px;
     margin: auto;
@@ -212,6 +199,27 @@ div h1 {
 
 }
 
+.milktea-container {
+    display: flex;
+    gap: 10px;
+    justify-content: space-around;
+    align-content: center;
+    flex-direction: column;
+    flex-shrink: 1;
+    margin-bottom: 20px;
+    min-height: 800px;
+    padding: 30px;
+    border-bottom: 2px solid rgb(212, 22, 149);
+}
+
+.item-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 1;
+
+}
+
 .milktea-container img {
     width: 300px;
     height: auto;
@@ -252,11 +260,7 @@ div h1 {
     font-size: 1.5em;
 }
 
-.item-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 .item-price {
     text-align: center;
