--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 
-html body {
+html {
     background-color: rgb(255, 255, 255);
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+/* header styles */
 
 header {
     display: flex;
@@ -31,6 +38,7 @@ nav {
     text-align: right;
     align-items: center;
     margin-right: 20px;
+    color: yellow;
 }
 
 ul {
@@ -45,6 +53,8 @@ a:hover {
     cursor: pointer;
 }
 
+
+/* logo styles */
 
 .logo-container {
     display: flex;
@@ -61,6 +71,8 @@ a:hover {
     object-fit: cover;
 
 }
+
+/* style for X between logos */
 
 div h1 {
     font-family: Arial, Helvetica, sans-serif;
@@ -81,8 +93,130 @@ div h1 {
 }
 
 
+
+/* .first-background {
+    background-color: rgba(255, 255, 255, 0.8);
+    /* background-image: url(images/bg.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-blend-mode: multiply;
+} */
+
+/* .second-background {
+    background-color: rgba(0, 0, 0, 0.8);
+    background-image: url(images/bg2.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-blend-mode: multiply;
+}
+
+.third-background {
+    background-color: rgba(0, 0, 0, 0.8);
+    background-image: url(images/bg4.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-blend-mode: multiply;
+
+} */
+
+
+/* styles for milktea items */
+
+
+.item-container img {
+    width: 300px;
+    height: auto;
+    z-index: 1;
+    display: block;
+    transition: transform 0.3s ease, opacity 0.5s ease-in-out, filter 0.3s ease;
+    border-radius: 30px;
+    position: relative;
+    margin: 50px;
+    border: 2px solid white;
+    margin-bottom: 10px;
+}
+
+.milktea-container img:active {
+    transform: scale(1.05);
+    filter: grayscale(0%);
+    opacity: 1.0;
+    z-index: 1;
+
+}
+
+
+.milktea-label {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    width: 280px;
+    height: 30px;
+    border-radius: 10px;
+    margin-top: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color:rgb(63, 63, 63);
+    font-size: 1.5em;
+}
+
+.milktea-container {
+    display: flex;
+    gap: 10px;
+    justify-content: space-around;
+    align-content: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+    min-height: 800px;
+    padding: 30px;
+    border-bottom: 2px solid rgb(212, 22, 149);
+    min-width: 300px;
+}
+
+.item-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.item-price {
+    text-align: center;
+    font-size: 2em;
+    color:rgb(116, 116, 116);
+    display: flex;
+    flex-direction: column;
+
+}
+
+ 
+.button-design {
+    background-color: rgb(10, 238, 238);
+    border: 2px solid white;
+    margin-top: 5px;
+    transition: transform 0.3s ease;
+    height: 50px;
+    font-size: 20px;
+}
+
+.button-design:hover {
+    background-color: rgb(22, 161, 161);
+    cursor: pointer;
+}
+
+.button-design:active {
+    transform: scale(1.1);
+}
+
+/* cart styles */
+
+
 .cart-container {
-    height: 200px;
     margin: auto;
     max-width: 800px;
 
@@ -94,6 +228,19 @@ div h1 {
 }
 
 .cart-column {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 1px solid rgb(212, 22, 149);
+    padding-bottom: 10px;
+    margin-right: 1.5em;
+    margin-bottom: 2em;
+    margin-top: 2em;
+    margin-left: 1.5em;
+    gap: 100px;
+}
+
+.cart-item-row {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -161,129 +308,13 @@ div h1 {
 }
 
 .total-price {
-    margin-right: 2em;
+    margin-right: 0;
     font-size: 2em;
     margin-bottom: 1em;
     text-align: end;
     padding-bottom: 2em;
-
-}
-
-
-/* 
-.first-background {
-    background-color: rgba(255, 255, 255, 0.8);
-    /* background-image: url(images/bg.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-blend-mode: multiply; */
-}
-
-.second-background {
-    background-color: rgba(0, 0, 0, 0.8);
-    background-image: url(images/bg2.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-blend-mode: multiply;
-}
-
-.third-background {
-    background-color: rgba(0, 0, 0, 0.8);
-    background-image: url(images/bg4.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-blend-mode: multiply; */
-
-}
-
-.milktea-container {
     display: flex;
+    justify-content: center;
     gap: 10px;
-    justify-content: space-around;
-    align-content: center;
-    flex-direction: column;
-    flex-shrink: 1;
-    margin-bottom: 20px;
-    min-height: 800px;
-    padding: 30px;
-    border-bottom: 2px solid rgb(212, 22, 149);
-}
 
-.item-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 1;
-
-}
-
-.milktea-container img {
-    width: 300px;
-    height: auto;
-    z-index: 1;
-    display: block;
-    transition: transform 0.3s ease, opacity 0.5s ease-in-out, filter 0.3s ease;
-    border-radius: 30px;
-    position: relative;
-    margin: 50px;
-    border: 2px solid white;
-    margin-bottom: 10px;
-   
-  
-}
-
-.milktea-container img:active {
-    transform: scale(1.05);
-    filter: grayscale(0%);
-    opacity: 1.0;
-    z-index: 1;
-
-}
-
-
-.milktea-label {
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(255, 255, 255);
-    width: 280px;
-    height: 30px;
-    border-radius: 10px;
-    margin-top: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    color:rgb(63, 63, 63);
-    font-size: 1.5em;
-}
-
-
-
-.item-price {
-    text-align: center;
-    font-size: 2em;
-    color:rgb(116, 116, 116);
-
-}
-
- 
-.button-design {
-    background-color: rgb(10, 238, 238);
-    border: 2px solid white;
-    margin-top: 5px;
-    transition: transform 0.3s ease;
-    height: 50px;
-    font-size: 20px;
-}
-
-.button-design:hover {
-    background-color: rgb(22, 161, 161);
-    cursor: pointer;
-}
-
-.button-design:active {
-    transform: scale(1.1);
 }
