--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
 
-html {
-    background-color: rgb(255, 255, 255);
-    margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+* {
+    box-sizing: border-box;
+   
 }
 
-body {
-    display: flex;
+html, body {
+    background-color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
     flex-direction: column;
+    margin: 0px;
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 /* header styles */
 
 header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     font-family: Arial, Helvetica, sans-serif;
     align-content: center;
@@ -23,6 +28,7 @@ header {
     position: sticky;
     top: 0px;
     z-index: 2;
+    min-width: 0px;
     
 }
 
@@ -31,6 +37,7 @@ header {
     display: flex;
     font-size: 25px;
     margin-left: 20px;
+    min-width: 0px;
 }
 
 nav {
@@ -39,6 +46,7 @@ nav {
     align-items: center;
     margin-right: 20px;
     color: yellow;
+    min-width: 0px;
 }
 
 ul {
@@ -46,6 +54,7 @@ ul {
     display: flex;
     align-items: center;
     gap: 5px;
+    min-width: 0px;
 }
 
 a:hover {
@@ -93,36 +102,6 @@ div h1 {
 }
 
 
-
-/* .first-background {
-    background-color: rgba(255, 255, 255, 0.8);
-    /* background-image: url(images/bg.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-blend-mode: multiply;
-} */
-
-/* .second-background {
-    background-color: rgba(0, 0, 0, 0.8);
-    background-image: url(images/bg2.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-blend-mode: multiply;
-}
-
-.third-background {
-    background-color: rgba(0, 0, 0, 0.8);
-    background-image: url(images/bg4.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-blend-mode: multiply;
-
-} */
-
-
 /* styles for milktea items */
 
 
@@ -130,13 +109,13 @@ div h1 {
     width: 300px;
     height: auto;
     z-index: 1;
-    display: block;
+    display: flex;
     transition: transform 0.3s ease, opacity 0.5s ease-in-out, filter 0.3s ease;
     border-radius: 30px;
-    position: relative;
     margin: 50px;
     border: 2px solid white;
     margin-bottom: 10px;
+    min-width: 0px;
 }
 
 .milktea-container img:active {
@@ -155,7 +134,7 @@ div h1 {
     align-items: center;
     background-color: rgb(255, 255, 255);
     width: 280px;
-    height: 30px;
+    height: 30px; */
     border-radius: 10px;
     margin-top: 0px;
     font-family: Arial, Helvetica, sans-serif;
@@ -165,24 +144,33 @@ div h1 {
 }
 
 .milktea-container {
-    display: flex;
+    /* display: flex; */
     gap: 10px;
     justify-content: space-around;
     align-content: center;
-    flex-direction: column;
+    flex-direction: row;
     margin-bottom: 20px;
-    min-height: 800px;
     padding: 30px;
     border-bottom: 2px solid rgb(212, 22, 149);
-    min-width: 300px;
+    min-width: 0px;
+    flex-grow: 1;
+    flex-wrap: wrap;
 }
 
 .item-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
+    flex-grow: 1;
+    min-width: 0px;
+}
+
+.img-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .item-price {
@@ -219,6 +207,9 @@ div h1 {
 .cart-container {
     margin: auto;
     max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 
 }
 
@@ -238,11 +229,12 @@ div h1 {
     margin-top: 2em;
     margin-left: 1.5em;
     gap: 100px;
+    flex-grow: 1;
 }
 
 .cart-item-row {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid rgb(212, 22, 149);
     padding-bottom: 10px;
@@ -280,15 +272,15 @@ div h1 {
 }
 
 .button-add {
-    background-color: rgb(8, 122, 8);
+    background-color: rgb(78, 199, 255);
 }
 
 .button-remove {
-    background-color: rgb(234, 79, 79);
+    background-color: rgb(244, 141, 141);
 }
 .cart-item {
     font-size: 1em;
-    width: 45%;
+    width: 200px;
     text-align: center;
     padding-bottom: 0px;
 }
