--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 * {
     box-sizing: border-box;
+    /* border: 1px solid grey; */
    
 }
 
@@ -10,8 +11,8 @@ html, body {
     flex-direction: column;
     margin: 0px;
     display: flex;
-    width: 100%;
-    height: 100%;
+    align-items: center;
+    
 }
 
 /* header styles */
@@ -19,7 +20,7 @@ html, body {
 header {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
     align-content: center;
     background-color: rgb(0, 65, 29);
@@ -29,6 +30,8 @@ header {
     top: 0px;
     z-index: 2;
     min-width: 0px;
+    width: 100vw;
+    gap: 20%;
     
 }
 
@@ -45,7 +48,7 @@ nav {
     text-align: right;
     align-items: center;
     margin-right: 20px;
-    color: yellow;
+    color: rgb(255, 255, 255);
     min-width: 0px;
 }
 
@@ -53,8 +56,9 @@ ul {
     list-style: none;
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 1em;;
     min-width: 0px;
+    font-size: 1.5em;
 }
 
 a:hover {
@@ -69,7 +73,6 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 300px;
     overflow: hidden;
     background-color: white;
 
@@ -92,13 +95,13 @@ div h1 {
 .business-description {
     display: flex;
     justify-content: center;
-    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 2em;
     text-align: center;
     background-color: antiquewhite;
     padding: 20px;
     margin: 0px;
+    width: 100%;
 }
 
 
@@ -106,7 +109,7 @@ div h1 {
 
 
 .item-container img {
-    width: 300px;
+    width: 80%;
     height: auto;
     z-index: 1;
     display: flex;
@@ -116,6 +119,7 @@ div h1 {
     border: 2px solid white;
     margin-bottom: 10px;
     min-width: 0px;
+    
 }
 
 .milktea-container img:active {
@@ -133,8 +137,8 @@ div h1 {
     justify-content: center;
     align-items: center;
     background-color: rgb(255, 255, 255);
-    width: 280px;
-    height: 30px; */
+    width: 100%;
+    height: 30px;
     border-radius: 10px;
     margin-top: 0px;
     font-family: Arial, Helvetica, sans-serif;
@@ -144,17 +148,18 @@ div h1 {
 }
 
 .milktea-container {
-    /* display: flex; */
-    gap: 10px;
+    display: flex;
     justify-content: space-around;
     align-content: center;
+    align-items: center;
     flex-direction: row;
     margin-bottom: 20px;
     padding: 30px;
     border-bottom: 2px solid rgb(212, 22, 149);
     min-width: 0px;
-    flex-grow: 1;
+    width: 80%;
     flex-wrap: wrap;
+    max-width: 1200px;
 }
 
 .item-container {
@@ -163,14 +168,16 @@ div h1 {
     align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
-    flex-grow: 1;
+    /* flex-grow: 1; */
     min-width: 0px;
+    max-width: 500px;
 }
 
 .img-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .item-price {
@@ -206,10 +213,10 @@ div h1 {
 
 .cart-container {
     margin: auto;
-    max-width: 800px;
+    width: 80%;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
+    max-width: 800px;
 
 }
 
@@ -218,86 +225,105 @@ div h1 {
     text-align: center;
 }
 
+/* style for cart column labels */
+
 .cart-column {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
     border-bottom: 1px solid rgb(212, 22, 149);
-    padding-bottom: 10px;
-    margin-right: 1.5em;
-    margin-bottom: 2em;
-    margin-top: 2em;
-    margin-left: 1.5em;
-    gap: 100px;
-    flex-grow: 1;
+    padding-bottom: 0.5em;
 }
+
+.cart-item-label {
+    font-size: 1em;
+    width: 20%;
+    text-align: center;
+    padding-bottom: 0px;
+    margin: 0.5em;
+}
+
+
+/* styles for cart item, flavor, price, and quantity */
 
 .cart-item-row {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-around;
     border-bottom: 1px solid rgb(212, 22, 149);
-    padding-bottom: 10px;
-    margin-right: 1.5em;
-    margin-bottom: 2em;
-    margin-top: 2em;
-    margin-left: 1.5em;
+    flex-direction: row; 
+    align-items: center;
 }
 
-.remove-column {
-    width: 25%;
+.cart-item-image {
+    /* width: 20%; */
+    border-radius: 15%;
 }
 
-.cart-quantity {
-    width: 50px;
-    height: 40px;
-    font-size: 1.3em;
+.cart-item-flavor {
+    align-self: center;
     text-align: center;
-    margin-bottom: 10px;
+ }
+
+
+.cart-item-price {
+    text-align: center;
+    align-self: center;
+
+}
+
+.row-items {
+    width: 5.5em;
+    margin: 1vh;
+    /* display: block; */
+    height: 5.5em;
+}
+
+.cart-item-row span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .quantity {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 
-.button-quantity {
-    width: 70px;
-    height: 40px;
+.cart-quantity {
+    font-size: 1em;
     text-align: center;
-    color: white;
-    border: none;
-    border-radius: 15%;
+}
+
+/* styles for add and remove button */
+
+.button-container {
+    align-self: stretch;
+    flex-direction: column;
+    justify-content: center;
+    display: flex;
+    gap: 0.5vh;
 }
 
 .button-add {
     background-color: rgb(78, 199, 255);
+    width: 100%;
+    height: 50%;
+    border: 0px;
+    border-radius: 50%;
 }
 
 .button-remove {
     background-color: rgb(244, 141, 141);
-}
-.cart-item {
-    font-size: 1em;
-    width: 200px;
-    text-align: center;
-    padding-bottom: 0px;
+    width: 100%;
+    height: 50%;
+    border: 0px;
+    border-radius: 50%;
 }
 
-.cart-item-image {
-    width: 15%;
-    margin-bottom: 1em;
-    border-radius: 15%;
-}
 
-.cart-item-price {
-    margin-right: 10px;
-}
-
-.cart-item-flavor {
-    margin-left: -1.1em;
-}
+/* styles for total price */
 
 .total-price {
     margin-right: 0;
@@ -308,5 +334,8 @@ div h1 {
     display: flex;
     justify-content: center;
     gap: 10px;
+    width: 80%;
+    max-width: 800px;;
+    margin-top: 1em;
 
 }
